--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,16 +32,21 @@ certicate.signedcertificatekey.filepath=/Users/mandadinitheesh/eclipse-workspace
 
 
 
-spring.datasource.username=root
+#spring.datasource.username=root
 
-spring.datasource.password=Nitheeshreddy143@
+#spring.datasource.password=Nitheeshreddy143@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
 
 spring.jpa.show-sql=true
 
+#spring.jpa.hibernate.ddl-auto=update
+
+
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/demo
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:Nitheeshreddy143@}
 
 
 spring.mail.host=smtp.gmail.com
@@ -72,6 +77,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+#spring.profiles.active=docker
 
 
 
